--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "11.0.0",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-tabs": "^3.2.2"
   },
   "eslintConfig": {
     "extends": [
