--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next build && next export"
   },
   "dependencies": {
     "framer-motion": "^4.1.17",
     "next": "11.0.0",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
-    "react-tabs": "^3.2.2"
+    "react-tabs": "^3.2.2",
+    "uuid": "^8.3.2"
   },
   "eslintConfig": {
     "extends": [
@@ -23,9 +26,9 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "prettier": "^2.2.1",
     "eslint": "7.29.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-config-wesbos": "^1.0.1",
     "eslint-plugin-html": "^6.1.1",
@@ -33,6 +36,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.2.1"
   }
 }
