--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "framer-motion": "^4.1.17",
-    "next": "11.0.0",
+    "next": "^14.0.1",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
