--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "framer-motion": "^4.1.17",
     "next": "^14.0.1",
     "prop-types": "^15.7.2",
-    "react": "17.0.2",
+    "react": "^18",
     "react-beautiful-dnd": "^13.1.0",
-    "react-dom": "17.0.2",
+    "react-dom": "^18",
     "react-tabs": "^3.2.2",
     "uuid": "^8.3.2"
   },
